--- a/.github/workflows/main_backends.yml
+++ b/.github/workflows/main_backends.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
+      - name: npm install, start, and dev
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm start
+          npm run dev
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
