--- a/.github/workflows/main_backends.yml
+++ b/.github/workflows/main_backends.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, start, and dev
+      - name: npm install, build, and test
         run: |
           npm install
-          npm start
-          npm run dev
+          npm rub build
+          npm run test
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
