--- a/.github/workflows/main_backends.yml
+++ b/.github/workflows/main_backends.yml
@@ -24,7 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm rub build
+          npm run build
           npm run test
 
       - name: Zip artifact for deployment
